--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "type": "commonjs",
   "dependencies": {
     "@prisma/client": "^6.6.0",
+    "axios": "^1.8.4",
     "dotenv": "^16.5.0",
     "grammy": "^1.36.0",
     "prisma": "^6.6.0"
