--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "ts-node-dev src/bot.ts",
     "build": "tsc",
-    "start": "node dist/bot.js"
+    "start": "node dist/bot.js",
+    "seed": "ts-node -P tsconfig.seed.json prisma/seed.ts",
+    "reset-db": "rimraf prisma/dev.db && pnpm exec prisma db push --force-reset --accept-data-loss && pnpm run seed"
   },
   "description": "",
   "keywords": [],
@@ -14,13 +16,24 @@
   "type": "commonjs",
   "dependencies": {
     "@prisma/client": "^6.6.0",
+    "@vitalets/google-translate-api": "^9.2.1",
+    "@xenova/transformers": "^2.17.2",
     "axios": "^1.8.4",
     "dotenv": "^16.5.0",
+    "emoji-dictionary": "^1.0.12",
+    "emojibase-data": "^16.0.3",
+    "emojilib": "^4.0.2",
+    "faker": "^6.6.6",
+    "free-translate": "^0.6.1",
     "grammy": "^1.36.0",
-    "prisma": "^6.6.0"
+    "prisma": "^6.6.0",
+    "translatte": "^3.0.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.7.0",
     "@types/node": "^22.14.1",
+    "rimraf": "^6.0.1",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0"
   }
 }
