--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^9.7.0",
+    "typescript": "^5.8.3",
     "@types/node": "^22.14.1",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
