--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "emojibase-data": "^16.0.3",
     "emojilib": "^4.0.2",
     "faker": "^6.6.6",
+    "form-data": "^4.0.3",
     "free-translate": "^0.6.1",
     "grammy": "^1.36.0",
     "prisma": "^6.6.0",
@@ -31,10 +32,10 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^9.7.0",
-    "typescript": "^5.8.3",
     "@types/node": "^22.14.1",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.8.3"
   }
 }
